[tool.poetry]
name = "liquidity"
version = "0.1.0"
description = ""
authors = ["benisbuzz <ben@danziger.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fredpy = "^3.2.8"
yfinance = "^0.2.30"
matplotlib = "^3.8.0"
numpy = "^1.26.0"
requests = "^2.31.0"
pandas = "^2.1.1"
TA-Lib = "^0.4.28"
ipython = "^8.15.0"
python-dotenv = "^1.0.0"
statsmodels = "^0.14.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
